--- a/sections/section_1.1.html
+++ b/sections/section_1.1.html
@@ -38,9 +38,9 @@
                 <center><h3>Top 3 Feared Social Situations</h3></center>
                 <form name="exercise_1" id="exercise_1">
                     <div data-role='fieldcontain' >
-                        <input type='text' name='fear_1' placeholder='1.'/>
-                        <input type='text' name='fear_2' placeholder='2.'/>
-                        <input type='text' name='fear_3' placeholder='3.'/>
+                        <input type='text' name='fear_1' placeholder='1.' onchange='submitExcerise_1()'/>
+                        <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_1()'/>
+                        <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_1()'/>
                     </div>
                 </form>
                 <script>
