--- a/sections/section_1.2.html
+++ b/sections/section_1.2.html
@@ -45,26 +45,26 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type='text' name='fear_1' id='fear_1' placeholder='1.'/>
+                            <input type='text' name='fear_1' id='fear_1' placeholder='1.' onchange='submitExcerise_2()'/>
                         </td>
                         <td>
-                            <input type='text' name='thought_1'/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_2' placeholder='2.'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_2'/>
+                            <input type='text' name='thought_1' onchange='submitExcerise_2()'/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type='text' name='fear_3' placeholder='3.'/>
+                            <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_2()'/>
                         </td>
                         <td>
-                            <input type='text' name='thought_3'/>
+                            <input type='text' name='thought_2' onchange='submitExcerise_2()'/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_2()'/>
+                        </td>
+                        <td>
+                            <input type='text' name='thought_3' onchange='submitExcerise_2()'/>
                         </td>
                     </tr>
                 </table>
