--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -3,15 +3,6 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../lib/jquery.mobile-1.3.2.min.css" />
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../lib/jquery-2.0.3.min.js"></script>
-        <script>
-        $(document).bind("mobileinit", function(){
-            $.mobile.defaultPageTransition = 'none';
-        });
-    </script>
-    <script src="../lib/jquery.mobile-1.3.2.min.js"></script>
 </head>
 
 <body>
@@ -75,23 +66,23 @@
                     </tr>
                     <tr id='exercise_6_row_1'>
                         <td>
-                            <input type='text' id='exercise_6_thought_1'/>
+                            <input type='text' class='exercise_6_thought' onchange='submitExcerise_6()'/>
                         </td>
                         <td>
                             <div data-role="fieldcontain">
-                                <select id="exercise_6_strategy_1" data-native-menu="false" data-mini='true'>
+                                <select id='exercise_6_strategy_1' class="exercise_6_strategy" data-native-menu="false" data-mini='true' onchange='submitExcerise_6()'>
                                     <option value="none"></option>
-                                    <option value="fortune_telling">Fortune-Telling</option>
-                                    <option value="mind_reading">Mind Reading</option>
-                                    <option value="shoulding">"Shoulding"</option>
-                                    <option value="portmortem">Postmortem</option>
-                                    <option value="spotlight_effect">The Spotlight Effect</option>
-                                    <option value="generating_stories">Generating Stories</option>
+                                    <option value="Fortune-Telling">Fortune-Telling</option>
+                                    <option value="Mind Reading">Mind Reading</option>
+                                    <option value="Shoulding">"Shoulding"</option>
+                                    <option value="Postmortem">Postmortem</option>
+                                    <option value="The Spotlight Effect">The Spotlight Effect</option>
+                                    <option value="Generating Stories">Generating Stories</option>
                                 </select>
                             </div>
                         </td>
                         <td>
-                            <input type='text' id='exercise_6_notice_1'/>
+                            <input type='text' class='exercise_6_notice' onchange='submitExcerise_6()'/>
                         </td>
                         <td >
                         </td>
@@ -100,12 +91,58 @@
             </form>
             <a href="#" id='2' onclick='exercise_6_add_row();' data-role="button" >Add Entry</a>
             <script>
+                if (localStorage['exercise_6']) {
+                    var exercise_6 = JSON.parse(localStorage['exercise_6']);
+                    for (var i = 1; i<=exercise_6['rows']; i++){
+                        if (i===1) {
+                            var thoughts = document.getElementsByClassName('exercise_6_thought');
+                            var notices = document.getElementsByClassName('exercise_6_notice');
+
+                            thoughts[i-1].value = exercise_6['exercise_6_thought_'+i];
+                            notices[i-1].value = exercise_6['exercise_6_notice_'+i];
+                        } else {
+                            exercise_6_add_row(exercise_6['exercise_6_thought_'+i],exercise_6['exercise_6_notice_'+i]);
+                        }
+                        $("#exercise_6_strategy_"+i).val(exercise_6['exercise_6_strategy_'+i]).attr('selected', true)
+                        console.log(exercise_6['exercise_6_strategy_'+i])
+                    }
+                }
+                function submitExcerise_6() {
+                    var exercise_6 = {};
+                    var table=document.getElementById("table_exercise_6");
+
+                    exercise_6['rows'] = table.rows.length-1; //exclude header
+
+                    var strategies = document.getElementsByClassName('exercise_6_strategy');
+                    var thoughts = document.getElementsByClassName('exercise_6_thought');
+                    var notices = document.getElementsByClassName('exercise_6_notice');
+                    for (var i = 1; i<table.rows.length;i++){
+
+                        exercise_6['exercise_6_thought_'+i] = thoughts[i-1].value
+                        var id = strategies[i].id;
+                        exercise_6['exercise_6_strategy_'+i] = $("#"+id).val();
+                        exercise_6['exercise_6_notice_'+i] =  notices[i-1].value
+
+                        console.log(thoughts[i-1].value)
+                        console.log($("#"+id).val())
+                        console.log (notices[i-1].value)
+
+                    }
+                    localStorage.setItem('exercise_6', JSON.stringify(exercise_6));             
+                }
+
                 function exercise_6_remove_row(id) {
                     var table=document.getElementById("table_exercise_6");
                     var rowIndex = document.getElementById("exercise_6_row_"+id).rowIndex;
                     table.deleteRow(rowIndex);
                 }
-                function exercise_6_add_row() {
+                function exercise_6_add_row(thought, notice) {
+                    if (!thought) {
+                        thought = ""
+                    }
+                    if (!notice) {
+                        notice = ""
+                    }
                     var table=document.getElementById("table_exercise_6");
                     var row_number = table.rows.length;
 
@@ -116,10 +153,13 @@
                     var cell3=row.insertCell(2);
                     var cell4=row.insertCell(3);
 
-                    cell1.innerHTML="<input type='text' id='exercise_6_thought_"+row_number+"' />";
-                    cell2.innerHTML="<div data-role='fieldcontain'><select data-mini='true' id='exercise_6_strategy_"+row_number+"' data-native-menu='false'><option value='none'></option><option value='fortune_telling'>Fortune-Telling</option><option value='mind_reading'>Mind Reading</option><option value='shoulding'>'Shoulding'</option><option value='portmortem'>Postmortem</option><option value='spotlight_effect'>The Spotlight Effect</option><option value='generating_stories'>Generating Stories</option></select></div>";
-                    cell3.innerHTML = "<input type='text' name='exercise_6_notice_1'/>";
-                    cell4.innerHTML = "<a href='#' id='exercise_6_remove_"+row_number+"' onclick='exercise_6_remove_row("+row_number+");' data-role='button' data-icon='delete' data-iconpos='notext' data-mini='true' data-inline='true'>Delete</a>"
+                    cell1.innerHTML="<input type='text' id='exercise_6_thought_"+row_number+"' value='"+thought+"'/>";
+
+
+                    cell2.innerHTML="<div data-role='fieldcontain'><select data-mini='true' id='exercise_6_strategy_"+row_number+"' class='exercise_6_strategy' data-native-menu='false'><option value='none'></option><option value='Fortune-Telling'>Fortune-Telling</option><option value='Mind Reading'>Mind Reading</option><option value='Shoulding'>'Shoulding'</option><option value='Postmortem'>Postmortem</option><option value='The Spotlight Effect'>The Spotlight Effect</option><option value='Generating Stories'>Generating Stories</option></select></div>";
+
+                    cell3.innerHTML = "<input type='text' name='exercise_6_notice_1' value='"+notice+"' />";
+                    cell4.innerHTML = "<a href='#' id='exercise_6_remove_"+row_number+"' onclick='exercise_6_remove_row("+row_number+");' data-role='button' data-icon='delete' data-iconpos='notext' data-mini='true' data-inline='true'>Delete</a>";
                     $('#page').trigger("pagecreate");
                 }
             </script>
