--- a/exercises/exercise_7.html
+++ b/exercises/exercise_7.html
@@ -9,36 +9,11 @@
 
     <div data-role="page" data-position="fixed" id='page'>
         <div data-role="header">
-            <h1>Summary of Defusion Strategies</h1>
+            <h1>Exercise 7: Defusing from Your Anxious Thoughts</h1>
         </div>
         <!-- /header -->
 
         <div data-role="content" id='section_5_body'>
-            <p>
-                <b><i>I am having the thought that:</i></b> For example, <i>I am having the thought that I'm making a fool of myself.</i>
-                <br>
-                <br>
-                <b><i>Name what the mind is doing:</i></b> Name the type of anxious thinking (fortune-telling, mind reading, "shoulding," postmortem, spotlight effect, storytelling, and more basic types, such as worrying and judging).
-                <br>
-                <br>
-                <b><i>Give real names to your thoughts:</i></b> For example, <i>Mind-Reading Randy.</i>
-                <br>
-                <br>
-                <b><i>Ditch the meanings of your thoughts:</i></b> Use repetition or other voices, sing them, see them.
-                <br>
-                <br>
-                <b><i>Thank the mind:</i></b> For example, <i>Thanks for the memory.</i>
-                <br>
-                <br>
-                <i><b>Defuse with Dr. Phil:</b> How's that thought working for you?</i>
-                <br>
-                <br>
-                <b><i>Awareness of thinking:</i></b> Listen to the audio download (at www.newharbinger.com/20801) or sit silently with your thoughts.
-                <br>
-                <br>
-                <b><i>Observe your thoughts:</i></b> Use the waterfall metaphor, leaves on a stream, or clouds in the sky.
-            </p>
-            <h2> Exercise 6: Defusing from Your Anxious Thoughts </h2>
             <p>
                 Over the next several days, try out all of the defusion strategies (summarized in the previous box).
                 <br>
@@ -184,13 +159,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="section_4.html">Previous</a>
+                        <a href="exercise_6.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_6.html">Continue</a>
+                        <a href="#" class="ui-btn-active ui-state-persist">Continue</a>
                     </li>
                 </ul>
             </div>
