--- a/sections/section_6.html
+++ b/sections/section_6.html
@@ -41,13 +41,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="../index.html" data-rel="dialog" data-transition="pop">Back</a>
+                        <a href="section_5.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#"onclick="" class="ui-btn-active ui-state-persist">Continue</a>
+                        <a href="#" class="ui-btn-active ui-state-persist">Continue</a>
                     </li>
                 </ul>
             </div>
