--- a/index.html
+++ b/index.html
@@ -14,47 +14,64 @@
     </script>
     <script src="lib/jquery.mobile-1.3.2.min.js"></script>
 
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script>
+ $(function() {
+    var progressbar = $( "#progressbar" ),
+      progressLabel = $( ".progress-label" );
+ 
+    progressbar.progressbar({
+      value: false,
+      change: function() {
+        progressLabel.text( progressbar.progressbar( "value" ) + "%" );
+      },
+      complete: function() {
+        progressLabel.text( "Complete!" );
+      }
+    });
+ 
+    function progress() {
+      var val = progressbar.progressbar( "value" ) || 0;
+ 
+      progressbar.progressbar( "value", val + 1 );
+ 
+      if ( val < 99 ) {
+        setTimeout( progress, 100 );
+      }
+    }
+ 
+    setTimeout( progress, 3000 );
+  });
+    </script>
 </head>
 
 <body>
 
         <div data-role="page" data-position="fixed" data-theme="a">
-
-
-                <div data-role="header">
-                    <h1>Home </h1>
-                </div>
                 <!-- /header -->
 
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section One</h3>
-                    <a href="sections/section_1.html">Introduction</a>
-                    <br>
-                    <br>
-                    <a href="sections/section_1.1.html">Defining Shyness and Social Anxiety</a>
-                    <br>
-                    <br>
-                    <a href="sections/section_1.2.html">Defusing from Your Anxious Thoughts</a>
+                    <h3>Content</h3>
+                    <a href="sections/section_1.html"><p>Defining Shyness and Social Anxiety</p></a>
+                    <a href="sections/section_2.html"><p>Types of Anxious Thinking</p></a>
+                    <a href="sections/section_3.html"><p>Defusing from Your Social-Anxiety Thoughts</p></a>
+                    <a href="sections/section_4.html"><p>Developing Awareness of Thinking</p></a>
+                    <a href="sections/section_5.html"><p>Summary of Defusion Strategies</p></a>
+                    <a href="sections/section_6.html"><p>Conclusion</p></a>
                 </div>
+
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Two</h3>
-                    <a href="sections/section_2.html">Types of Anxious Thinking</a>
-                </div>
-                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Three</h3>
-                    <a href="sections/section_3.html">s3</a>
-                </div>
-                                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Four</h3>
-                    <a href="sections/section_4.html">s4</a>
-                </div>
-                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Five</h3>
-                    <a href="sections/section_5.html">s5</a>
-                </div>
-                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Six</h3>
-                    <a href="sections/section_6.html">s6</a>
+                    <h3>Exercises</h3>
+                        <a href="exercises/exercise_1.html"><p>Exercise 1: Top Feared Social Situations</p></a>
+                        <a href="exercises/exercise_2.html"><p>Exercise 2: Your Anxious Thoughts</p></a>
+                        <a href="exercises/exercise_3.html"><p>Exercise 3: "Shoulding"</p></a>
+                        <a href="exercises/exercise_4.html"><p>Exercise 4: Generating Stories</p></a>
+                        <a href="exercises/exercise_5.html"><p>Exercise 5: Types of Anxious Thinking</p></a>
+                        <a href="exercises/exercise_6.html"><p>Exercise 6: Awareness of Thinking</p></a>
+                        <a href="exercises/exercise_7.html"><p>Exercise 7: Defusing from Your Anxious Thoughts</p></a>
                 </div>
 
                 <script> 
@@ -64,6 +81,9 @@
                     }
                 </script>
                 <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
+
+
+                <div id="progressbar"></div>
 
 
         </div>
