--- a/sections/section_3.html
+++ b/sections/section_3.html
@@ -3,22 +3,13 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../lib/jquery.mobile-1.3.2.min.css" />
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../lib/jquery-2.0.3.min.js"></script>
-        <script>
-        $(document).bind("mobileinit", function(){
-            $.mobile.defaultPageTransition = 'none';
-        });
-    </script>
-    <script src="../lib/jquery.mobile-1.3.2.min.js"></script>
 </head>
 
 <body>
 
     <div data-role="page" data-position="fixed">
         <div data-role="header">
-            <h1>Defusing from Your Social-Anxiety Thoughts</h>
+            <h1>Defusing from Your Social-Anxiety Thoughts</h1>
         </div>
         <!-- /header -->
 
