--- a/sections/section_4.html
+++ b/sections/section_4.html
@@ -3,15 +3,6 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../lib/jquery.mobile-1.3.2.min.css" />
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../lib/jquery-2.0.3.min.js"></script>
-        <script>
-        $(document).bind("mobileinit", function(){
-            $.mobile.defaultPageTransition = 'none';
-        });
-    </script>
-    <script src="../lib/jquery.mobile-1.3.2.min.js"></script>
 </head>
 
 <body>
@@ -92,13 +83,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="../index.html" data-rel="dialog" data-transition="pop">Back</a>
+                        <a href="section_3">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_5.html"onclick="">Continue</a>
+                        <a href="section_5.html">Continue</a>
                     </li>
                 </ul>
             </div>
