--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -104,17 +104,17 @@
             </p>
             <form id='exercise_4'>
                 <label for="story_1"><b>In social situations I feel as if I am (for example, an imposter)</b> </label>
-                <input type="text" id="story_1" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_1" value="" placeholder='' onchange='submitExcerise_4()' />
                 <label for="story_2"><b>In social situations I am someone who always (for example, says the wrong thing)</b> </label>
-                <input type="text" id="story_2" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_2" value="" placeholder='' onchange='submitExcerise_4()' />
                 <label for="story_3"><b>In social situations I am someone who can't (for example, do small talk)</b> </label>
-                <input type="text" id="story_3" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_3" value="" placeholder='' onchange='submitExcerise_4()' />
                 <label for="story_4"><b>In social situations my best attribute is (for example, being the listener)</b> </label>
-                <input type="text" id="story_4" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_4" value="" placeholder='' onchange='submitExcerise_4()' />
                 <label for="story_5"><b>In social situations my worst attribute is (for example, being the listener)</b> </label>
-                <input type="text" id="story_5" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_5" value="" placeholder='' onchange='submitExcerise_4()' />
                 <label for="story_6"><b>Record any other stories your mind generates:</b> </label>
-                <input type="text" id="story_6" value="" onchange='submitExcerise_4()' />
+                <input type="text" id="story_6" value="" placeholder=''onchange='submitExcerise_4()' />
             </form>
             <script>
                  if (localStorage['exercise_4']) {
