--- a/exercises/exercise_7.html
+++ b/exercises/exercise_7.html
@@ -13,35 +13,29 @@
         </div>
         <!-- /header -->
 
-        <div data-role="content" id='section_5_body'>
-            <p>
-                Over the next several days, try out all of the defusion strategies (summarized in the previous box).
-                <br>
-                <br>
-                To get as much practice as possible, try defusing from everyday thoughts (for example, <i>I am having the thought that I want to eat a muffin for breakfast)</i> as well as social-anxiety thoughts. 
-                <br>
-                <br>
-                You can try some of the strategies right when you notice the thought (e.g, <b>naming what the mind is doing</b> or <b>thanking the mind</b>); for others, you may want to wait until you have some time to yourself (e.g., <b>ditching the meaning of your thoughts</b> or <b>awareness of thinking</b>). 
-            </p>
+        <div data-role="content">
 
             <form name="exercise_7" id='exercise_7'>
                 <table border="0" cellpadding='0' id='table_exercise_7'>
                     <tr>
                         <td>
-                            <center><b>Thought</b></center>
+                            <center><b>Thought</b>
+                            </center>
                         </td>
                         <td>
-                            <center><b>Defusion Strategy</b></center>
+                            <center><b>Defusion Strategy</b>
+                            </center>
                         </td>
                         <td>
-                            <center><b>What Did You Notice?</b></center>
+                            <center><b>What Did You Notice?</b>
+                            </center>
                         </td>
                         <td>
                         </td>
                     </tr>
                     <tr id='exercise_7_row_1'>
                         <td>
-                            <input type='text' class='exercise_7_thought' onchange='submitExcerise_7()'/>
+                            <input type='text' class='exercise_7_thought' onchange='submitExcerise_7()' />
                         </td>
                         <td>
                             <div data-role="fieldcontain">
@@ -57,70 +51,59 @@
                             </div>
                         </td>
                         <td>
-                            <input type='text' class='exercise_7_notice' onchange='submitExcerise_7()'/>
+                            <input type='text' class='exercise_7_notice' onchange='submitExcerise_7()' />
                         </td>
-                        <td >
+                        <td>
                         </td>
                     </tr>
                 </table>
             </form>
-            <a href="#" id='2' onclick='exercise_7_add_row();' data-role="button" >Add Entry</a>
+            <a href="#" id='2' onclick='exercise_7_add_row();' data-role="button">Add Entry</a>
             <script>
                 if (localStorage['exercise_7']) {
                     var exercise_7 = JSON.parse(localStorage['exercise_7']);
 
-                    for (var i = 1; i<=exercise_7['rows']; i++){
-                        if (i===1) {
+                    for (var i = 1; i <= exercise_7['rows']; i++) {
+                        if (i === 1) {
                             var thoughts = document.getElementsByClassName('exercise_7_thought');
                             var notices = document.getElementsByClassName('exercise_7_notice');
 
-                            thoughts[i-1].value = exercise_7['exercise_7_thought_'+i];
-                            notices[i-1].value = exercise_7['exercise_7_notice_'+i];
+                            thoughts[i - 1].value = exercise_7['exercise_7_thought_' + i];
+                            notices[i - 1].value = exercise_7['exercise_7_notice_' + i];
                         } else {
-                            exercise_7_add_row(exercise_7['exercise_7_thought_'+i],exercise_7['exercise_7_notice_'+i],true);
+                            exercise_7_add_row(exercise_7['exercise_7_thought_' + i], exercise_7['exercise_7_notice_' + i], true);
                         }
-                        $("#exercise_7_strategy_"+i).val(exercise_7['exercise_7_strategy_'+i]).attr('selected', true)
-                        console.log(exercise_7['exercise_7_strategy_'+i])
+                        $("#exercise_7_strategy_" + i).val(exercise_7['exercise_7_strategy_' + i]).attr('selected', true)
                     }
                 }
+
                 function submitExcerise_7() {
                     var exercise_7 = {};
-                    var table=document.getElementById("table_exercise_7");
+                    var table = document.getElementById("table_exercise_7");
 
-                    exercise_7['rows'] = table.rows.length-1; //exclude header
+                    exercise_7['rows'] = table.rows.length - 1; //exclude header
 
                     var strategies = document.getElementsByClassName('exercise_7_strategy');
                     var thoughts = document.getElementsByClassName('exercise_7_thought');
                     var notices = document.getElementsByClassName('exercise_7_notice');
-                    console.log("strats");
-                    for (var i = 0; i<strategies.length; i++) {
-                        
-                        console.log(strategies[i].id)
-                        
+
+                    for (var i = 1; i < table.rows.length; i++) {
+
+                        exercise_7['exercise_7_thought_' + i] = thoughts[i - 1].value
+                        var id = strategies[i + i - 1].id; //i'm not proud of myself
+                        exercise_7['exercise_7_strategy_' + i] = $("#" + id).val();
+                        exercise_7['exercise_7_notice_' + i] = notices[i - 1].value
                     }
-                    console.log('done')
-                    for (var i = 1; i<table.rows.length;i++){
-
-                        exercise_7['exercise_7_thought_'+i] = thoughts[i-1].value
-                        var id = strategies[i+i-1].id; //i'm not proud of myself
-                        console.log("id is:" +id)
-                        exercise_7['exercise_7_strategy_'+i] = $("#"+id).val();
-                        exercise_7['exercise_7_notice_'+i] =  notices[i-1].value
-
-                        console.log(thoughts[i-1].value)
-                        console.log($("#"+id).val())
-                        console.log (notices[i-1].value)
-
-                    }
-                    localStorage.setItem('exercise_7', JSON.stringify(exercise_7));             
+                    localStorage.setItem('exercise_7', JSON.stringify(exercise_7));
                 }
 
                 function exercise_7_remove_row(id) {
-                    var table=document.getElementById("table_exercise_7");
-                    var rowIndex = document.getElementById("exercise_7_row_"+id).rowIndex;
+                    var table = document.getElementById("table_exercise_7");
+                    var rowIndex = document.getElementById("exercise_7_row_" + id).rowIndex;
                     table.deleteRow(rowIndex);
                     submitExcerise_7();
                 }
+
                 function exercise_7_add_row(thought, notice, pageload) {
                     if (!thought) {
                         thought = ""
@@ -128,27 +111,23 @@
                     if (!notice) {
                         notice = ""
                     }
-                    var table=document.getElementById("table_exercise_7");
+                    var table = document.getElementById("table_exercise_7");
                     var row_number = table.rows.length;
 
-                    var row=table.insertRow(-1);
-                    row.id = "exercise_7_row_"+row_number;
-                    console.log("id of new row:"+row.id);
-                    var cell1=row.insertCell(0);
-                    var cell2=row.insertCell(1);
-                    var cell3=row.insertCell(2);
-                    var cell4=row.insertCell(3);
+                    var row = table.insertRow(-1);
+                    row.id = "exercise_7_row_" + row_number;
 
-                    cell1.innerHTML="<input type='text' class='exercise_7_thought' onchange='submitExcerise_7();' id='exercise_7_thought_"+row_number+"' value='"+thought+"'/>";
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+                    var cell3 = row.insertCell(2);
+                    var cell4 = row.insertCell(3);
 
+                    cell1.innerHTML = "<input type='text' class='exercise_7_thought' onchange='submitExcerise_7();' id='exercise_7_thought_" + row_number + "' value='" + thought + "'/>";
+                    cell2.innerHTML = "<div data-role='fieldcontain'><select class='exercise_7_strategy' onchange='submitExcerise_7();' data-mini='true' id='exercise_7_strategy_" + row_number + "'  data-native-menu='false'><option value='none'></option><option value='Fortune-Telling'>Fortune-Telling</option><option value='Mind Reading'>Mind Reading</option><option value='Shoulding'>'Shoulding'</option><option value='Postmortem'>Postmortem</option><option value='The Spotlight Effect'>The Spotlight Effect</option><option value='Generating Stories'>Generating Stories</option></select></div>";
+                    cell3.innerHTML = "<input type='text' class='exercise_7_notice' onchange='submitExcerise_7();' name='exercise_7_notice_1' value='" + notice + "' />";
+                    cell4.innerHTML = "<a href='#' id='exercise_7_remove_" + row_number + "' onclick='exercise_7_remove_row(" + row_number + ");' data-role='button' data-icon='delete' data-iconpos='notext' data-mini='true' data-inline='true'>Delete</a>";
 
-                    cell2.innerHTML="<div data-role='fieldcontain'><select class='exercise_7_strategy' onchange='submitExcerise_7();' data-mini='true' id='exercise_7_strategy_"+row_number+"'  data-native-menu='false'><option value='none'></option><option value='Fortune-Telling'>Fortune-Telling</option><option value='Mind Reading'>Mind Reading</option><option value='Shoulding'>'Shoulding'</option><option value='Postmortem'>Postmortem</option><option value='The Spotlight Effect'>The Spotlight Effect</option><option value='Generating Stories'>Generating Stories</option></select></div>";
-
-                    cell3.innerHTML = "<input type='text' class='exercise_7_notice' onchange='submitExcerise_7();' name='exercise_7_notice_1' value='"+notice+"' />";
-                    cell4.innerHTML = "<a href='#' id='exercise_7_remove_"+row_number+"' onclick='exercise_7_remove_row("+row_number+");' data-role='button' data-icon='delete' data-iconpos='notext' data-mini='true' data-inline='true'>Delete</a>";
-
-
-                    if (!pageload) {$('#page').trigger("pagecreate");}  //problems with loading page;
+                    $('#page').trigger("pagecreate");
                 }
             </script>
         </div>
@@ -177,4 +156,5 @@
     <!-- /page -->
 
 </body>
+
 </html>
