--- a/sections/section_4.html
+++ b/sections/section_4.html
@@ -9,7 +9,7 @@
 
     <div data-role="page" data-position="fixed">
         <div data-role="header">
-            <h1>section 4 - needs title</h>
+            <h1>Developing Awareness of Thinking</h>
         </div>
         <!-- /header -->
 
@@ -83,7 +83,7 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="section_3">Previous</a>
+                        <a href="section_3.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
