--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     }
                 </script>
                 <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
-
-
-                <div id="progressbar"></div>
-
+                <p> <meter value="8" min="0" max="10" style="width:10em;height:2em">75%</meter> 
+                70%</p>
+                
+                <br>
 
         </div>
         <!-- /page -->
