--- a/exercises/exercise_1.html
+++ b/exercises/exercise_1.html
@@ -17,7 +17,7 @@
                 <form name="exercise_1" id="exercise_1">
                     <table border="0">
                         <tr>
-                            <td style="width:90%">
+                            <td style="width:100%">
                                 <input type='text' name='fear_1' placeholder='1.' onchange='submitExcerise_1()'/> 
                             </td>
                             <td>
@@ -50,7 +50,7 @@
                         for (var i = 1; i <= 3; i++) {
                             if (exercise_1['fear_'+i].length>0) {
                                 document.forms["exercise_1"]["fear_"+i].value = exercise_1['fear_'+i];
-                                $('#fear_'+i+'_check').css('visibility','visible');
+                                //$('#fear_'+i+'_check').css('visibility','visible');
                             }
                         }
                     }
